3) goahead: add hardware traffic counters from switch to WebUI.<br>
4) goahead: use 3600 secs as default rekey interval for new BSSIDs.<br>
5) goahead: add ipv6 interfaces adresses to statisctic page.<br>
6) goahead: show dgw interface name if dgw add over if without ip adress at next hop.<br>
7) kernel: sched/fair: Fix RCU stall upon -ENOMEM in sched_create_group().<br>
8) kernel: mm: place preemption point in do_mlockall() loop.<br>
9) kernel: ralink_wifi: 76x2: fix rssi feedback work.<br>
10) kernel: ralink_arch: disable MT7621 PCIe clock if PCI not builded.<br>
11) kernel: net: avoid gcc miss optimization regression in data rx path.<br>
12) kernel: net: bridge: ability to fast isolation any port w/o ebtables.<br>
13) kernel: net: do not process device backlog during unregistration.<br>
14) kernel: net: call rcu_read_lock early in process_backlog.<br>
15) kernel: net: clone skb before setting peeked flag.<br>
16) kernel: net: tcp: don't abort splice() after small transfers.<br>
17) kernel: net: tcp: splice: fix an infinite loop in tcp_read_sock().<br>
18) kernel: net: tcp: remove obsolete check in tcp_set_skb_tso_segs().<br>
19) kernel: net: fq_codel: fix return value of fq_codel_drop().<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need add in wireless->basic fast roaming tune table (parametrs see in /etc/scripts/wifi_roaming.sh, only 76x2 drivers).<br>
4) need add in wireless->advanced BandSteering option if CONFIG_BAND_STEERING=y.<br>
5) need add in wireless->advanced IEEE80211H option (need for 5GHz outdor AP sertifications, this 1/0 per bssid param with ; divider).<br>
6) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
7) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>